--- a/views/admin/users-update.html
+++ b/views/admin/users-update.html
@@ -3,7 +3,7 @@
 <!-- Content Header (Page header) -->
 <section class="content-header">
   <h1>
-    Lista de Usuários
+    Lista de Contatos
   </h1>
 </section>
 
@@ -14,31 +14,43 @@
   	<div class="col-md-12">
   		<div class="box box-primary">
         <div class="box-header with-border">
-          <h3 class="box-title">Editar Usuário</h3>
+          <h3 class="box-title">Editar Contato</h3>
         </div>
         <!-- /.box-header -->
         <!-- form start -->
-        <form role="form" action="/admin/users/{$user.iduser}" method="post">
+        <form role="form" action="/admin/users/{$id_contato.id_contato}" method="post">
           <div class="box-body">
             <div class="form-group">
-              <label for="desperson">Nome</label>
-              <input type="text" class="form-control" id="desperson" name="desperson" placeholder="Digite o nome" value="{$user.desperson}">
+              <label for="nome">Nome</label>
+              <input type="text" class="form-control" id="nome" name="nome" placeholder="Digite o nome" value="{$user.nome}">
+            </div>
+
+            <div class="form-group">
+              <label for="id_cargo">Cargo
+                <select name="id_cargo" id="id_cargo">
+                  <option>Selecione o Cargo</option>
+                  <option value="5">SUPORTE TI</option>
+                  <option value="6">DEV</option>
+                  <option value="7">ESTAGIARIO</option>
+                </select>
+
+            <!-- <input type="text" class="form-control" id="descricao" name="descricao" placeholder="Digite o cargo"> -->
+            </label>
+            </div>
+
+
+
+            <div class="form-group">
+              <label for="numero">Telefone</label>
+              <input type="tel" class="form-control" id="numero" name="numero" placeholder="Digite o Telefone">
             </div>
             <div class="form-group">
-              <label for="deslogin">Login</label>
-              <input type="text" class="form-control" id="deslogin" name="deslogin" placeholder="Digite o login"  value="{$user.deslogin}">
-            </div>
-            <div class="form-group">
-              <label for="nrphone">Telefone</label>
-              <input type="tel" class="form-control" id="nrphone" name="nrphone" placeholder="Digite o telefone"  value="{$user.nrphone}">
-            </div>
-            <div class="form-group">
-              <label for="desemail">E-mail</label>
-              <input type="email" class="form-control" id="desemail" name="desemail" placeholder="Digite o e-mail" value="{$user.desemail}">
+              <label for="email">E-mail</label>
+              <input type="email" class="form-control" id="email" name="email" placeholder="Digite o E-mail">
             </div>
             <div class="checkbox">
               <label>
-                <input type="checkbox" name="inadmin" value="1" {if="$user.inadmin == 1"}checked{/if}> Acesso de Administrador
+                <input type="checkbox" name="status" value="1"> Status
               </label>
             </div>
           </div>
